# grpc-smaple

./: CMakeLists.txt  README.md
hello/: CMakeLists.txt  main.cc
protos/: hello.proto
